IntelliJ Platform Gradle Plugin 2.0 migration (#143)
* Gradle 8.7

* IntelliJ Platform Gradle Plugin 2.0: use new plugin ID - `org.jetbrains.intellij.platform`

* IntelliJ Platform Gradle Plugin 2.0 migration